--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ log = "0.4"
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
 cpal = "0.15.3"
+rustfft = "6.2.0"
+rand = "0.8.5"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
